--- a/assets/css/font.css
+++ b/assets/css/font.css
@@ -4,7 +4,8 @@
 body {
   background-color: #fff;
   padding:0px;
-  font: 16.0px/1.5 Crimson Pro, serif; 
+  /* font: 16.0px/1.5 Crimson Pro, serif;  */
+  font: 16.0px/1.5 Crimson Pro, arial; 
   color:#595959;
   font-weight:400;
   margin:0
