--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -43,7 +43,8 @@
         <a class="image avatar"><img src="{{ site.avatar }}" alt="avatar" /></a>
         {% endif %}
 
-        <h1 style="font-size: 1.5rem;">{{ site.title }}</h1>
+        <!-- <h1 style="font-size: 1.5rem;">{{ site.title }}</h1> -->
+        <h1 style="font-size: 1.5rem; font-family: 'Microsoft YaHei', sans-serif;">{{ site.title }}</h1>
 
         {% if site.position %}
         <position style="font-size:1.10rem;">{{ site.position }}</position>
