--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -45,9 +45,9 @@
 
         <!-- <h1 style="font-size: 1.5rem;">{{ site.title }}</h1> -->
         <h1 style="font-size: 1.5rem;">
-          Yanbo Zhang (<span style="font-family: 'Microsoft YaHei', sans-serif;">张延博</span>)
+          Yanbo Zhang (<span style="font-family: 'KaiTi', sans-serif;">张延博</span>)
         </h1>
-        
+
         {% if site.position %}
         <position style="font-size:1.10rem;">{{ site.position }}</position>
         <br>
