--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -87,6 +87,12 @@
         </a>
         {% endif %}
 
+        {% if site.wechat %}
+        <a style="margin: 0 5px 0 0" href="{{ site.wechat }}">
+          <i class="fab fa-linkedin"></i>
+        </a>
+        {% endif %}
+
         {% if site.twitter %}
         <a style="margin: 0 0 0 0" href="{{ site.twitter }}">
           <i class="fab fa-twitter"></i>
