--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -89,7 +89,7 @@
 
         {% if site.wechat %}
         <a style="margin: 0 5px 0 0" href="{{ site.wechat }}">
-          <i class="fab fa-linkedin"></i>
+          <i class="fab fa-wechat"></i>
         </a>
         {% endif %}
 
